@@ -9,6 +9,10 @@ Changes since the uhexen2-1.5.3 release:
   progress bars during level load in opengl mode.
 * Music playback: Made sure that the file's channels count is supported.
 * Client, all: Revised the intermissions setup code.
+* Mouse (DOS): Wheel is now detected and used by default. Use -nowheel
+  command line switch to disable it.
+* Mouse (DOS): Pausing the game, moving the mouse and then unpausing it,
+  doesn't change the view angle anymore.
 * All: Incremented versions for the hexen2 engine to 1.26 and hexenworld
   engine to 0.26.
 * Several source code cleanups.
